Update Messages URL to use the new *.google.com domain over *.android.com.  Pack new version.

--- a/src/html/embed.html
+++ b/src/html/embed.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Most magic happens here -->
-    <webview id="webview" src="https://messages.android.com/" partition="persist:androidmessages"></webview>
+    <webview id="webview" src="https://messages.google.com/web/conversations" partition="persist:androidmessages"></webview>
     
     <!-- Find in page -->
     <div id="find-box">
